# MatrixChain

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
compare/: CMakeLists.txt  compare.out  compare.py  generate.py  matrix_chain_cmp.cpp
compare/compare_in/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
include/: matrix_chain.hpp
include/MatrixChain/: matrix_chain.hpp
src/: CMakeLists.txt  matrix_chain.cpp
tests/: CMakeLists.txt
tests/end_to_end/: CMakeLists.txt  generate.py  run_tests.py
tests/end_to_end/answers/: answer_001.ans  answer_002.ans  answer_003.ans  answer_004.ans  answer_005.ans  answer_006.ans  answer_007.ans  answer_008.ans  answer_009.ans  answer_010.ans
tests/end_to_end/tests_in/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
tests/unit/: CMakeLists.txt  matrix_chain_unit_test.cpp
